Add media logic on springboot backend
