# backend/springboot/src/main/java/com/doryann/flowpilot/command/api/media/DeleteMediaCommand.java
@@ -1,0 +1,16 @@
+package com.doryann.flowpilot.command.api.media;
+
+import jakarta.validation.constraints.NotNull;
+import lombok.Builder;
+import lombok.Value;
+import org.axonframework.modelling.command.TargetAggregateIdentifier;
+
+import java.util.UUID;
+
+@Builder
+@Value
+public class DeleteMediaCommand {
+    @NotNull
+    @TargetAggregateIdentifier
+    UUID mediaId;
+}
