# backend/springboot/src/main/java/com/doryann/flowpilot/command/api/media/RateMediaCommand.java
@@ -1,0 +1,17 @@
+package com.doryann.flowpilot.command.api.media;
+
+import jakarta.validation.constraints.NotNull;
+import lombok.Builder;
+import lombok.Value;
+import org.axonframework.modelling.command.TargetAggregateIdentifier;
+
+import java.util.UUID;
+
+@Builder
+@Value
+public class RateMediaCommand {
+    @NotNull
+    @TargetAggregateIdentifier
+    UUID mediaId;
+    int rating;
+}
